--- a/flask_app/templates/directories.html
+++ b/flask_app/templates/directories.html
@@ -8,7 +8,7 @@
   {% for dir in dirs %}
   <tr>
     <td>
-      {{dir._id}} -- {{dir.directory}}
+      <a href="/logs/{{dir.name}}">{{dir._id}} -- {{dir.directory}}</a>
     </td>
     <td>
       {{ dir.size_bytes }} bytes
