--- a/flask_app/templates/directories.html
+++ b/flask_app/templates/directories.html
@@ -3,15 +3,12 @@
 {% block body %}
 <table class="table">
   <thead>
-    <tr><th>Name</th><th>Size</th><th>Updated</th></tr>
+    <tr><th>Name</th><th>Updated</th></tr>
   </thead>
   {% for dir in dirs %}
   <tr>
     <td>
-      <a href="/logs/{{dir.name}}">{{dir._id}} -- {{dir.directory}}</a>
-    </td>
-    <td>
-      {{ dir.size_bytes }} bytes
+      <a href="/logs/{{dir.name}}">{{dir.name}}</a>
     </td>
     <td>
       {{ dir.updated }}
