--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -21,7 +21,7 @@
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container" style="width:90%">
-        <a class="brand" href="#">Autoclave</a>
+        <a class="brand" href="#">Logpile</a>
         <ul class="nav">
         </ul>
         <div class="pull-right">
